Use cm-model's software model
